# founders_transcripts_RAG

./: .gitignore  .replit  LICENSE  README.md  config.yaml  main.py  pyproject.toml  replit.md
data/: .gitkeep
src/: __init__.py  cli.py  config_manager.py  document_processor.py  llm_manager.py  prompt_templates.py  rag_engine.py  vector_store.py
templates/: model_configs.yaml  research_prompts.yaml
vector_db/: .gitkeep
